# rust_game_engine

rust_wgpu_game_engine/: Cargo.toml  README.md  build.rs
rust_wgpu_game_engine/src/: main.rs  shader.wgsl
rust_wgpu_game_engine/src/game_engine/: camera.rs  entity.rs  light.rs  loader.rs  main_shader.rs  master_renderer.rs  mod.rs  model_texture.rs  raw_model.rs  renderer.rs  textured_model.rs
