[package]
name = "rust_wgpu_game_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"
bytemuck = { version = "1.24", features = [ "derive" ] }
glam = { version = "0.31.0", features = ["bytemuck"] }
encase = { version = "0.10", features = ["glam"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
